# hushwire-crypto

./: .gitignore  Cargo.toml  LICENSE  README.md  TESTING.md
.github/workflows/: verify.yml
docs/: signal-spec-divergence.md
proofs/: README.md  braid_machine.pv  combiner.pv  common.pvl  epoch_sync.pv  run.sh
src/: address.rs  error.rs  lib.rs  prelude.rs  serialization.rs  types.rs
src/hushwire/: envelope.rs  mod.rs  provisioning.rs  recovery.rs  storage_key.rs  trust_root.rs
src/hushwire/org/: metadata.rs  mod.rs  signing.rs
src/primitives/: aead.rs  kdf.rs  keys.rs  mod.rs  padding.rs
src/protocol/: mod.rs  pqxdh.rs  prekey.rs  stores.rs
src/protocol/braid/: auth.rs  erasure.rs  kem.rs  mod.rs  state_machine.rs
src/protocol/ratchet/: chain.rs  header.rs  mod.rs  skipped.rs  spqr.rs
src/protocol/sealed_sender/: certificate.rs  mod.rs
src/protocol/sender_key/: distribution.rs  mod.rs
src/protocol/sesame/: convergence.rs  lifecycle.rs  mod.rs  state.rs
